--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   },
   "author": "Afees Adedamola Kolawole",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dcodesmith/epg-react-redux-ui.git"
+  },
   "dependencies": {
     "babel-polyfill": "6.8.0",
     "bootstrap": "3.3.6",
@@ -77,9 +81,5 @@
     "webpack": "1.13.0",
     "webpack-dev-middleware": "1.6.1",
     "webpack-hot-middleware": "2.10.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/coryhouse/pluralsight-redux-starter"
   }
 }
