--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   "dependencies": {
     "babel-polyfill": "6.8.0",
     "bootstrap": "3.3.6",
-    "isomorphic-fetch": "^2.2.1",
-    "moment": "^2.14.1",
-    "node-fetch": "^1.5.3",
+    "isomorphic-fetch": "2.2.1",
+    "moment": "2.14.1",
+    "node-fetch": "1.5.3",
     "react": "15.0.2",
     "react-dom": "15.0.2",
     "react-redux": "4.4.5",
@@ -46,7 +46,7 @@
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
     "babel-register": "6.8.0",
-    "classnames": "^2.2.5",
+    "classnames": "2.2.5",
     "colors": "1.1.2",
     "compression": "1.6.1",
     "cross-env": "1.0.7",
@@ -62,20 +62,21 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "jsdom": "8.5.0",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
+    "less": "2.7.1",
+    "less-loader": "2.2.3",
     "mocha": "2.4.5",
     "nock": "8.0.0",
     "npm-run-all": "1.8.0",
     "open": "0.0.5",
-    "postcss-loader": "^0.9.1",
-    "querystring": "^0.2.0",
-    "raw-loader": "^0.5.1",
+    "postcss-loader": "0.9.1",
+    "querystring": "0.2.0",
+    "raw-loader": "0.5.1",
     "react-addons-test-utils": "15.0.2",
     "redux-immutable-state-invariant": "1.2.3",
     "redux-mock-store": "1.0.2",
     "rimraf": "2.5.2",
-    "style-loader": "^0.13.1",
+    "sinon": "1.17.5",
+    "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.0",
     "webpack-dev-middleware": "1.6.1",
