--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "open:src": "babel-node tools/server.js",
     "lint": "node_modules/.bin/esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch",
-    "test": "mocha --reporter spec tools/testSetup.js \"src/**/*.test.js\"",
+    "test": "mocha --reporter spec tools/.testSetup.js \"src/**/*.test.js\"",
     "test:watch": "npm test -- -w",
+    "test:coverage": "scripts/coverage.sh",
+    "a": "./node_modules/.bin/nyc --reporter=json --require babel-core/register ./node_modules/.bin/mocha tools/.testSetup.js \"src/**/*.test.js\"",
     "clean-dist": "npm run remove-dist && mkdir dist",
     "remove-dist": "node_modules/.bin/rimraf ./dist",
     "build:html": "babel-node tools/buildHtml.js",
@@ -61,12 +63,14 @@
     "express": "4.13.4",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
+    "istanbul": "^0.4.4",
     "jsdom": "8.5.0",
     "less": "2.7.1",
     "less-loader": "2.2.3",
     "mocha": "2.4.5",
     "nock": "8.0.0",
     "npm-run-all": "1.8.0",
+    "nyc": "^8.1.0",
     "open": "0.0.5",
     "postcss-loader": "0.9.1",
     "querystring": "0.2.0",
@@ -74,6 +78,7 @@
     "react-addons-test-utils": "15.0.2",
     "redux-immutable-state-invariant": "1.2.3",
     "redux-mock-store": "1.0.2",
+    "remap-istanbul": "^0.6.4",
     "rimraf": "2.5.2",
     "sinon": "1.17.5",
     "style-loader": "0.13.1",
