--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-preset-react": "6.16.0",
     "babel-preset-react-hmre": "1.1.1",
     "babel-register": "6.18.0",
+    "chai": "^3.5.0",
     "classnames": "2.2.5",
     "colors": "1.1.2",
     "compression": "1.6.2",
@@ -81,6 +82,7 @@
     "remap-istanbul": "^0.7.0",
     "rimraf": "2.5.4",
     "sinon": "1.17.6",
+    "sinon-chai": "^2.8.0",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.3",
