--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "node-fetch": "1.6.3",
     "react": "15.3.2",
     "react-dom": "15.4.0",
+    "react-router": "4.0.0-beta.6",
     "react-redux": "5.0.3",
-    "react-router": "3.0.0",
     "react-router-redux": "4.0.7",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0"
