--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "classnames": "2.2.5",
     "colors": "1.1.2",
     "compression": "1.6.2",
+    "enzyme": "2.7.1",
     "cross-env": "3.2.3",
     "css-loader": "0.26.2",
     "enzyme": "2.5.1",
