--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "bootstrap": "3.3.7",
     "isomorphic-fetch": "2.2.1",
     "moment": "2.16.0",
-    "node-fetch": "1.6.3",
+    "node-fetch": "2.0.0-alpha.3",
     "react": "15.3.2",
     "react-dom": "15.4.0",
     "react-router-redux": "4.0.8",
