--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "extends": [
     "eslint:recommended",
     "plugin:import/errors",
-    "plugin:import/warnings"
+    "plugin:import/warnings",
+    "airbnb"
   ],
   "plugins": [
     "react"
@@ -22,10 +23,13 @@
     "mocha": true
   },
   "rules": {
+    "comma-dangle": ["error", "never"],
+    "import/no-extraneous-dependencies": 0,
     "quotes": 0,
     "no-console": 1,
     "no-debugger": 1,
     "no-var": 1,
+    "consistent-return": 0,
     "semi": [1, "always"],
     "no-trailing-spaces": 0,
     "eol-last": 0,
@@ -38,7 +42,7 @@
     "react/forbid-prop-types": [1, {"forbid": ["any"]}],
     "react/jsx-boolean-value": 1,
     "react/jsx-closing-bracket-location": 0,
-    "react/jsx-curly-spacing": 1,
+    "react/jsx-curly-spacing": 0,
     "react/jsx-indent-props": 0,
     "react/jsx-key": 1,
     "react/jsx-max-props-per-line": 0,
@@ -61,9 +65,9 @@
     "react/prefer-es6-class": 1,
     "react/prop-types": 1,
     "react/react-in-jsx-scope": 1,
-    "react/require-extension": 1,
+    "react/require-extension": 0,
     "react/self-closing-comp": 1,
     "react/sort-comp": 1,
-    "react/wrap-multilines": 1
+    "react/jsx-wrap-multilines": 1
   }
 }
