--- a/package.json
+++ b/package.json
@@ -28,18 +28,22 @@
   "dependencies": {
     "babel-polyfill": "6.23.0",
     "bootstrap": "3.3.7",
+    "cheerio": "^0.22.0",
+    "colors": "1.1.2",
     "isomorphic-fetch": "2.2.1",
+    "lodash": "^4.17.4",
     "moment": "2.17.1",
     "node-fetch": "2.0.0-alpha.3",
     "react": "15.3.2",
     "react-dom": "15.4.0",
-    "react-router-redux": "4.0.8",
-    "react-router": "4.0.0-beta.6",
     "react-redux": "5.0.3",
     "redux": "3.6.0",
-    "redux-thunk": "2.1.2"
+    "redux-immutable-state-invariant": "1.2.4",
+    "redux-thunk": "2.1.2",
+    "webpack": "1.14.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
     "babel-cli": "6.22.2",
     "babel-core": "6.23.1",
     "babel-loader": "6.3.2",
@@ -50,41 +54,39 @@
     "babel-register": "6.18.0",
     "chai": "^3.5.0",
     "classnames": "2.2.5",
-    "colors": "1.1.2",
     "compression": "1.6.2",
-    "enzyme": "2.7.1",
     "cross-env": "3.2.3",
     "css-loader": "0.26.2",
     "enzyme": "2.5.1",
     "eslint": "3.17.0",
+    "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "6.10.0",
     "eslint-watch": "3.0.0",
     "eventsource-polyfill": "0.9.6",
     "expect": "1.20.2",
     "express": "4.14.1",
-    "file-loader": "0.10.1",
     "extract-text-webpack-plugin": "2.1.0",
+    "file-loader": "0.10.1",
     "istanbul": "^0.4.4",
-    "less": "2.7.2",
     "jsdom": "9.11.0",
+    "less": "2.7.2",
     "less-loader": "2.2.3",
     "mocha": "3.2.0",
-    "nyc": "^10.1.2",
-    "npm-run-all": "4.0.2",
     "nock": "9.0.9",
+    "npm-run-all": "4.0.2",
+    "nyc": "^10.1.2",
     "open": "0.0.5",
     "postcss-loader": "1.3.3",
     "querystring": "0.2.0",
     "raw-loader": "0.5.1",
     "react-addons-test-utils": "15.4.2",
-    "redux-immutable-state-invariant": "1.2.4",
     "redux-mock-store": "1.2.2",
     "remap-istanbul": "^0.9.1",
     "rimraf": "2.6.1",
     "sinon": "2.0.0-pre.6",
     "sinon-chai": "^2.8.0",
-    "webpack": "1.14.0",
     "style-loader": "0.13.2",
     "url-loader": "0.5.8",
     "webpack-dev-middleware": "1.10.1",
