--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,8 @@
     "import/no-extraneous-dependencies": 0,
     "quotes": 0,
     "no-unused-expressions": 0,
+    "one-var": 0,
+    "one-var-declaration-per-line": 0,
     "no-console": 1,
     "no-debugger": 1,
     "no-var": 1,
