--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "querystring": "0.2.0",
     "raw-loader": "0.5.1",
     "react-addons-test-utils": "15.4.2",
+    "redux-devtools-extension": "^2.13.0",
     "redux-mock-store": "1.2.2",
     "remap-istanbul": "^0.9.1",
     "rimraf": "2.6.1",
