--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "node-fetch": "2.0.0-alpha.3",
     "react": "15.3.2",
     "react-dom": "15.4.0",
+    "react-modal": "^1.7.7",
     "react-redux": "5.0.3",
     "redux": "3.6.0",
     "redux-immutable-state-invariant": "1.2.4",
