--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "cross-env": "3.2.3",
     "css-loader": "0.26.2",
     "enzyme": "2.5.1",
-    "eslint": "3.17.0",
+    "eslint": "^3.17.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
