--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "redux-devtools-extension": "^2.13.0",
     "redux-mock-store": "1.2.2",
     "remap-istanbul": "^0.9.1",
+    "reselect": "^3.0.0",
     "rimraf": "2.6.1",
     "sinon": "2.0.0-pre.6",
     "sinon-chai": "^2.8.0",
