--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "redux": "3.6.0",
     "redux-immutable-state-invariant": "1.2.4",
     "redux-thunk": "2.1.2",
+    "reselect": "^3.0.1",
     "webpack": "1.14.0"
   },
   "devDependencies": {
