Refactors: Fixed coverage, changed test files extension

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,11 @@
   "env": {
     "development": {
       "presets": ["react-hmre"]
+    },
+    "test": {
+      "plugins": [
+        "istanbul"
+      ]
     }
   }
 }
