--- a/package.json
+++ b/package.json
@@ -2,16 +2,28 @@
   "name": "react-redux-epg-ui",
   "version": "1.0.0",
   "description": "EPG Component built in React+Redux",
+  "nyc": {
+    "cache": true,
+    "require": [
+      "./tools/.testSetup.js"
+    ],
+    "sourceMap": false,
+    "instrument": false,
+    "reporter": [
+      "lcov",
+      "text"
+    ]
+  },
   "scripts": {
     "prestart": "babel-node tools/startMessage.js",
     "start": "npm-run-all --parallel open:src lint:watch",
     "open:src": "babel-node tools/server.js",
     "lint": "node_modules/.bin/esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch",
-    "test": "mocha --reporter spec tools/.testSetup.js \"src/**/*.test.{jsx,js}\"",
+    "test": "cross-env NODE_ENV=test mocha --require babel-core/register src/**/*.test.js",
+    "coverage": "cross-env NODE_ENV=test nyc --all mocha --recursive src",
     "test:watch": "npm test -- -w",
     "test:coverage": "scripts/coverage.sh",
-    "a": "./node_modules/.bin/nyc --reporter=json --require babel-core/register ./node_modules/.bin/mocha tools/.testSetup.js \"src/**/*.test.js\"",
     "clean-dist": "npm run remove-dist && mkdir dist",
     "remove-dist": "node_modules/.bin/rimraf ./dist",
     "build:html": "babel-node tools/buildHtml.js",
@@ -51,6 +63,7 @@
     "babel-cli": "6.22.2",
     "babel-core": "6.23.1",
     "babel-loader": "6.3.2",
+    "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-react-display-name": "2.0.0",
     "babel-preset-es2015": "6.22.0",
     "babel-preset-react": "6.16.0",
@@ -59,7 +72,7 @@
     "chai": "^3.5.0",
     "classnames": "2.2.5",
     "compression": "1.6.2",
-    "cross-env": "3.2.3",
+    "cross-env": "^3.2.3",
     "css-loader": "0.26.2",
     "enzyme": "2.5.1",
     "eslint": "^3.17.0",
@@ -80,7 +93,7 @@
     "mocha": "3.2.0",
     "nock": "9.0.9",
     "npm-run-all": "4.0.2",
-    "nyc": "^10.1.2",
+    "nyc": "^11.0.2",
     "open": "0.0.5",
     "postcss-loader": "1.3.3",
     "querystring": "0.2.0",
