--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lint": "node_modules/.bin/esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch",
     "test": "cross-env NODE_ENV=test mocha --require babel-core/register src/**/*.test.js",
-    "coverage": "cross-env NODE_ENV=test nyc --all mocha --recursive src",
+    "test:coverage": "cross-env NODE_ENV=test nyc --all mocha --recursive src",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "test:watch": "npm test -- -w",
     "test:coverage": "scripts/coverage.sh",
     "clean-dist": "npm run remove-dist && mkdir dist",
@@ -72,6 +73,7 @@
     "chai": "^3.5.0",
     "classnames": "2.2.5",
     "compression": "1.6.2",
+    "coveralls": "^2.13.1",
     "cross-env": "^3.2.3",
     "css-loader": "0.26.2",
     "enzyme": "2.5.1",
