--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ branches:
   only:
     - containerization
 
+script:
+  - npm run test:coverage
+  - npm run coverage
+
 cache:
   directories:
     - "node_modules"
