--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "chai": "^3.5.0",
     "cheerio": "^0.22.0",
     "colors": "1.1.2",
-    "isomorphic-fetch": "2.2.1",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
     "moment": "2.17.1",
@@ -99,7 +99,7 @@
     "less": "2.7.2",
     "less-loader": "2.2.3",
     "mocha": "3.2.0",
-    "nock": "9.0.9",
+    "nock": "^9.0.9",
     "npm-run-all": "4.0.2",
     "nyc": "^11.0.2",
     "open": "0.0.5",
