--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,19 @@
 language: node_js
 
 node_js:
-  - "7"
+  - stable
 
-branches:
-  only:
-    - master
+# branches:
+#   only:
+#     - master
+cache:
+  yarn: true
+  directories:
+    - node_modules
 
 script:
-  - npm run test:coverage
-  - npm run coverage
+  - yarn test:coverage
+  - yarn build
 
-cache:
-  directories:
-    - "node_modules"
+after_script:
+  - yarn coveralls
