--- a/package.json
+++ b/package.json
@@ -1,123 +1,54 @@
 {
-  "name": "react-redux-epg-ui",
-  "version": "1.0.0",
-  "description": "EPG Component built in React+Redux",
-  "nyc": {
-    "cache": true,
-    "require": [
-      "./tools/.testSetup.js"
-    ],
-    "sourceMap": false,
-    "instrument": false,
-    "reporter": [
-      "lcov",
-      "text"
-    ],
-    "include": [
-      "src"
-    ],
-    "exclude": [
-      "src/store"
-    ]
+  "name": "epg-react-redux-ui",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "bootstrap": "v4.0.0-beta.3",
+    "classnames": "^2.2.5",
+    "md5": "^2.2.1",
+    "moment": "^2.20.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-modal": "^3.1.10",
+    "react-redux": "^5.0.6",
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
-    "prestart": "babel-node tools/startMessage.js",
-    "start": "npm-run-all --parallel open:src lint:watch",
-    "open:src": "babel-node tools/server.js",
-    "lint": "node_modules/.bin/esw webpack.config.* src tools",
-    "lint:watch": "npm run lint -- --watch",
-    "test": "cross-env NODE_ENV=test mocha --require babel-core/register src/**/*.test.js",
-    "test:coverage": "cross-env NODE_ENV=test nyc --all mocha --recursive src",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "test:watch": "npm test -- -w",
-    "test:coverage:sh": "scripts/coverage.sh",
-    "clean-dist": "npm run remove-dist && mkdir dist",
-    "remove-dist": "node_modules/.bin/rimraf ./dist",
-    "build:html": "babel-node tools/buildHtml.js",
-    "prebuild": "npm-run-all clean-dist lint build:html",
-    "build": "babel-node tools/build.js",
-    "postbuild": "babel-node tools/distServer.js"
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
+    "test": "react-scripts test --env=jsdom --verbose",
+    "test:coverage": "react-scripts test --env=jsdom --coverage",
+    "coveralls": "ls -l ./coverage && cat ./coverage/lcov.info | coveralls",
+    "eject": "react-scripts eject"
   },
-  "author": "Afees Adedamola Kolawole",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/dcodesmith/epg-react-redux-ui.git"
-  },
-  "dependencies": {
-    "babel-polyfill": "6.23.0",
-    "bootstrap": "3.3.7",
-    "chai": "^3.5.0",
-    "cheerio": "^0.22.0",
-    "colors": "1.1.2",
-    "isomorphic-fetch": "^2.2.1",
-    "lodash": "^4.17.4",
-    "md5": "^2.2.1",
-    "moment": "2.17.1",
-    "node-fetch": "2.0.0-alpha.3",
-    "react": "15.3.2",
-    "react-dom": "15.4.0",
-    "react-modal": "^1.7.7",
-    "react-redux": "5.0.3",
-    "redux": "3.6.0",
-    "redux-immutable-state-invariant": "1.2.4",
-    "redux-thunk": "2.1.2",
-    "reselect": "^3.0.1",
-    "webpack": "1.14.0"
+  "jest": {
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "!**/src/*.js",
+      "!**/coverage/**/*.js",
+      "!**/src/store/**"
+    ]
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
-    "babel-cli": "6.22.2",
-    "babel-core": "6.23.1",
-    "babel-loader": "6.3.2",
-    "babel-plugin-istanbul": "^4.1.4",
-    "babel-plugin-react-display-name": "2.0.0",
-    "babel-preset-es2015": "6.22.0",
-    "babel-preset-react": "6.16.0",
-    "babel-preset-react-hmre": "1.1.1",
-    "babel-register": "6.18.0",
-    "chai": "^3.5.0",
-    "classnames": "2.2.5",
-    "compression": "1.6.2",
-    "coveralls": "^2.13.1",
-    "cross-env": "^3.2.3",
-    "css-loader": "0.26.2",
-    "enzyme": "2.5.1",
-    "eslint": "^3.17.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "6.10.0",
-    "eslint-watch": "3.0.0",
-    "eventsource-polyfill": "0.9.6",
-    "expect": "1.20.2",
-    "express": "4.14.1",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.10.1",
-    "istanbul": "^0.4.4",
-    "jsdom": "9.11.0",
-    "less": "2.7.2",
-    "less-loader": "2.2.3",
-    "mocha": "3.2.0",
-    "nock": "^9.0.9",
-    "npm-run-all": "4.0.2",
-    "nyc": "^11.0.2",
-    "open": "0.0.5",
-    "postcss-loader": "1.3.3",
-    "querystring": "0.2.0",
-    "raw-loader": "0.5.1",
-    "react-addons-test-utils": "15.4.2",
-    "recompose": "^0.23.1",
-    "redux-devtools-extension": "^2.13.0",
-    "redux-mock-store": "1.2.2",
-    "remap-istanbul": "^0.9.1",
-    "reselect": "^3.0.0",
-    "rimraf": "2.6.1",
-    "sinon": "2.0.0-pre.6",
-    "sinon-chai": "^2.8.0",
-    "style-loader": "0.13.2",
-    "url-loader": "0.5.8",
-    "webpack-dev-middleware": "1.10.1",
-    "webpack-hot-middleware": "2.17.1"
+    "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "nock": "^9.1.5",
+    "node-sass-chokidar": "^0.0.3",
+    "npm-run-all": "^4.1.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.4.0",
+    "reselect": "^3.0.1",
+    "sinon": "^4.1.3",
+    "sinon-chai": "^2.14.0"
   }
 }
