--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "**/*.{js,jsx}",
+      "**/src/**.{js,jsx}",
       "!**/src/*.js",
-      "!**/coverage/**/*.js",
       "!**/src/store/**",
       "!**/src/containers/**"
     ]
