--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "chai": "^4.1.2",
     "coveralls": "^3.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -51,6 +52,8 @@
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.4.0",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "sinon": "^4.1.3",
+    "sinon-chai": "^2.14.0"
   }
 }
