--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "jest": {
     "collectCoverageFrom": [
       "**/src/**.{js,jsx}",
+      "!**/src/**/index.js",
       "!**/src/*.js",
       "!**/src/store/**",
       "!**/src/containers/**"
